python/CompiladorLua/parser/LuaParser.py
# $ANTLR 3.1.2 Lua.g 2010-11-30 13:20:03

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
T__64=64
T__29=29
T__65=65
T__28=28
T__62=62
T__27=27
T__63=63
T__26=26
T__25=25
T__24=24
T__23=23
T__22=22
T__21=21
T__20=20
FLOAT=6
T__61=61
T__60=60
EOF=-1
HexDigit=15
T__55=55
T__56=56
T__57=57
NAME=4
T__58=58
T__51=51
T__52=52
T__53=53
T__54=54
EXP=7
HEX=8
T__59=59
COMMENT=16
T__50=50
T__42=42
T__43=43
T__40=40
T__41=41
T__46=46
T__47=47
T__44=44
T__45=45
LINE_COMMENT=17
T__48=48
T__49=49
CHARSTRING=10
INT=5
LONGSTRING=11
T__30=30
NORMALSTRING=9
T__31=31
T__32=32
WS=18
T__33=33
T__34=34
NEWLINE=19
T__35=35
T__36=36
T__37=37
T__38=38
T__39=39
UnicodeEscape=13
OctalEscape=14
EscapeSequence=12

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "NAME", "INT", "FLOAT", "EXP", "HEX", "NORMALSTRING", "CHARSTRING", 
    "LONGSTRING", "EscapeSequence", "UnicodeEscape", "OctalEscape", "HexDigit", 
    "COMMENT", "LINE_COMMENT", "WS", "NEWLINE", "';'", "'do'", "'end'", 
    "'while'", "'if'", "'then'", "'elseif'", "'else'", "'for'", "'in'", 
    "'function'", "'local'", "'='", "'return'", "'break'", "'continue'", 
    "'.'", "':'", "','", "'and'", "'or'", "'<'", "'<='", "'>'", "'>='", 
    "'=='", "'~='", "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "'..'", "'nil'", 
    "'false'", "'true'", "'...'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
    "'not'", "'#'"
]




class LuaParser(Parser):
    grammarFileName = "Lua.g"
    antlr_version = version_str_to_tuple("3.1.2")
    antlr_version_str = "3.1.2"
    tokenNames = tokenNames

    def __init__(self, input, state=None):
        if state is None:
            state = RecognizerSharedState()

        Parser.__init__(self, input, state)


        self.dfa11 = self.DFA11(
            self, 11,
            eot = self.DFA11_eot,
            eof = self.DFA11_eof,
            min = self.DFA11_min,
            max = self.DFA11_max,
            accept = self.DFA11_accept,
            special = self.DFA11_special,
            transition = self.DFA11_transition
            )






                
        self._adaptor = CommonTreeAdaptor()


        
    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class prog_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "prog"
    # Lua.g:10:1: prog : ( stat )+ ;
    def prog(self, ):

        retval = self.prog_return()
        retval.start = self.input.LT(1)

        root_0 = None

        stat1 = None



        try:
            try:
                # Lua.g:10:5: ( ( stat )+ )
                # Lua.g:10:7: ( stat )+
                pass 
                root_0 = self._adaptor.nil()

                # Lua.g:10:7: ( stat )+
                cnt1 = 0
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == NAME or LA1_0 == 21 or (23 <= LA1_0 <= 24) or LA1_0 == 28 or (30 <= LA1_0 <= 31)) :
                        alt1 = 1


                    if alt1 == 1:
                        # Lua.g:10:8: stat
                        pass 
                        self._state.following.append(self.FOLLOW_stat_in_prog39)
                        stat1 = self.stat()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, stat1.tree)
                        #action start
                        print(stat1.tree.toStringTree())
                        #action end


                    else:
                        if cnt1 >= 1:
                            break #loop1

                        eee = EarlyExitException(1, self.input)
                        raise eee

                    cnt1 += 1





                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "prog"

    class chunk_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "chunk"
    # Lua.g:12:1: chunk : ( stat ( ';' )? )* ( laststat ( ';' )? )? ;
    def chunk(self, ):

        retval = self.chunk_return()
        retval.start = self.input.LT(1)

        root_0 = None

        char_literal3 = None
        char_literal5 = None
        stat2 = None

        laststat4 = None


        char_literal3_tree = None
        char_literal5_tree = None

        try:
            try:
                # Lua.g:12:7: ( ( stat ( ';' )? )* ( laststat ( ';' )? )? )
                # Lua.g:12:9: ( stat ( ';' )? )* ( laststat ( ';' )? )?
                pass 
                root_0 = self._adaptor.nil()

                # Lua.g:12:9: ( stat ( ';' )? )*
                while True: #loop3
                    alt3 = 2
                    LA3_0 = self.input.LA(1)

                    if (LA3_0 == NAME or LA3_0 == 21 or (23 <= LA3_0 <= 24) or LA3_0 == 28 or (30 <= LA3_0 <= 31)) :
                        alt3 = 1


                    if alt3 == 1:
                        # Lua.g:12:10: stat ( ';' )?
                        pass 
                        self._state.following.append(self.FOLLOW_stat_in_chunk53)
                        stat2 = self.stat()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, stat2.tree)
                        # Lua.g:12:15: ( ';' )?
                        alt2 = 2
                        LA2_0 = self.input.LA(1)

                        if (LA2_0 == 20) :
                            alt2 = 1
                        if alt2 == 1:
                            # Lua.g:12:16: ';'
                            pass 
                            char_literal3=self.match(self.input, 20, self.FOLLOW_20_in_chunk56)

                            char_literal3_tree = self._adaptor.createWithPayload(char_literal3)
                            self._adaptor.addChild(root_0, char_literal3_tree)






                    else:
                        break #loop3


                # Lua.g:12:24: ( laststat ( ';' )? )?
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if ((33 <= LA5_0 <= 35)) :
                    alt5 = 1
                if alt5 == 1:
                    # Lua.g:12:25: laststat ( ';' )?
                    pass 
                    self._state.following.append(self.FOLLOW_laststat_in_chunk63)
                    laststat4 = self.laststat()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, laststat4.tree)
                    # Lua.g:12:34: ( ';' )?
                    alt4 = 2
                    LA4_0 = self.input.LA(1)

                    if (LA4_0 == 20) :
                        alt4 = 1
                    if alt4 == 1:
                        # Lua.g:12:35: ';'
                        pass 
                        char_literal5=self.match(self.input, 20, self.FOLLOW_20_in_chunk66)

                        char_literal5_tree = self._adaptor.createWithPayload(char_literal5)
                        self._adaptor.addChild(root_0, char_literal5_tree)










                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "chunk"

    class block_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "block"
    # Lua.g:14:1: block : chunk ;
    def block(self, ):

        retval = self.block_return()
        retval.start = self.input.LT(1)

        root_0 = None

        chunk6 = None



        try:
            try:
                # Lua.g:14:7: ( chunk )
                # Lua.g:14:9: chunk
                pass 
                root_0 = self._adaptor.nil()

                self._state.following.append(self.FOLLOW_chunk_in_block78)
                chunk6 = self.chunk()

                self._state.following.pop()
                self._adaptor.addChild(root_0, chunk6.tree)



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "block"

    class stat_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "stat"
    # Lua.g:16:1: stat : ( functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' namelist 'in' NAME 'do' block 'end' | 'function' ( funcname )? funcbody | 'local' 'function' NAME funcbody | ( 'local' )? namelist ( '=' explist1 )? -> ^( '=' ( 'local' )? namelist explist1 ) );
    def stat(self, ):

        retval = self.stat_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal8 = None
        string_literal10 = None
        string_literal11 = None
        string_literal13 = None
        string_literal15 = None
        string_literal16 = None
        string_literal18 = None
        string_literal20 = None
        string_literal22 = None
        string_literal24 = None
        string_literal26 = None
        string_literal27 = None
        string_literal29 = None
        NAME30 = None
        string_literal31 = None
        string_literal33 = None
        string_literal34 = None
        string_literal37 = None
        string_literal38 = None
        NAME39 = None
        string_literal41 = None
        char_literal43 = None
        functioncall7 = None

        block9 = None

        exp12 = None

        block14 = None

        exp17 = None

        block19 = None

        exp21 = None

        block23 = None

        block25 = None

        namelist28 = None

        block32 = None

        funcname35 = None

        funcbody36 = None

        funcbody40 = None

        namelist42 = None

        explist144 = None


        string_literal8_tree = None
        string_literal10_tree = None
        string_literal11_tree = None
        string_literal13_tree = None
        string_literal15_tree = None
        string_literal16_tree = None
        string_literal18_tree = None
        string_literal20_tree = None
        string_literal22_tree = None
        string_literal24_tree = None
        string_literal26_tree = None
        string_literal27_tree = None
        string_literal29_tree = None
        NAME30_tree = None
        string_literal31_tree = None
        string_literal33_tree = None
        string_literal34_tree = None
        string_literal37_tree = None
        string_literal38_tree = None
        NAME39_tree = None
        string_literal41_tree = None
        char_literal43_tree = None
        stream_32 = RewriteRuleTokenStream(self._adaptor, "token 32")
        stream_31 = RewriteRuleTokenStream(self._adaptor, "token 31")
        stream_namelist = RewriteRuleSubtreeStream(self._adaptor, "rule namelist")
        stream_explist1 = RewriteRuleSubtreeStream(self._adaptor, "rule explist1")
        try:
            try:
                # Lua.g:16:6: ( functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' namelist 'in' NAME 'do' block 'end' | 'function' ( funcname )? funcbody | 'local' 'function' NAME funcbody | ( 'local' )? namelist ( '=' explist1 )? -> ^( '=' ( 'local' )? namelist explist1 ) )
                alt11 = 8
                alt11 = self.dfa11.predict(self.input)
                if alt11 == 1:
                    # Lua.g:16:9: functioncall
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_functioncall_in_stat87)
                    functioncall7 = self.functioncall()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, functioncall7.tree)


                elif alt11 == 2:
                    # Lua.g:17:2: 'do' block 'end'
                    pass 
                    root_0 = self._adaptor.nil()

                    string_literal8=self.match(self.input, 21, self.FOLLOW_21_in_stat93)

                    string_literal8_tree = self._adaptor.createWithPayload(string_literal8)
                    self._adaptor.addChild(root_0, string_literal8_tree)

                    self._state.following.append(self.FOLLOW_block_in_stat95)
                    block9 = self.block()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, block9.tree)
                    string_literal10=self.match(self.input, 22, self.FOLLOW_22_in_stat97)

                    string_literal10_tree = self._adaptor.createWithPayload(string_literal10)
                    self._adaptor.addChild(root_0, string_literal10_tree)



                elif alt11 == 3:
                    # Lua.g:18:2: 'while' exp 'do' block 'end'
                    pass 
                    root_0 = self._adaptor.nil()

                    string_literal11=self.match(self.input, 23, self.FOLLOW_23_in_stat103)

                    string_literal11_tree = self._adaptor.createWithPayload(string_literal11)
                    self._adaptor.addChild(root_0, string_literal11_tree)

                    self._state.following.append(self.FOLLOW_exp_in_stat105)
                    exp12 = self.exp()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, exp12.tree)
                    string_literal13=self.match(self.input, 21, self.FOLLOW_21_in_stat107)

                    string_literal13_tree = self._adaptor.createWithPayload(string_literal13)
                    self._adaptor.addChild(root_0, string_literal13_tree)

                    self._state.following.append(self.FOLLOW_block_in_stat109)
                    block14 = self.block()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, block14.tree)
                    string_literal15=self.match(self.input, 22, self.FOLLOW_22_in_stat111)

                    string_literal15_tree = self._adaptor.createWithPayload(string_literal15)
                    self._adaptor.addChild(root_0, string_literal15_tree)



                elif alt11 == 4:
                    # Lua.g:19:2: 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end'
                    pass 
                    root_0 = self._adaptor.nil()

                    string_literal16=self.match(self.input, 24, self.FOLLOW_24_in_stat117)

                    string_literal16_tree = self._adaptor.createWithPayload(string_literal16)
                    self._adaptor.addChild(root_0, string_literal16_tree)

                    self._state.following.append(self.FOLLOW_exp_in_stat119)
                    exp17 = self.exp()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, exp17.tree)
                    string_literal18=self.match(self.input, 25, self.FOLLOW_25_in_stat121)

                    string_literal18_tree = self._adaptor.createWithPayload(string_literal18)
                    self._adaptor.addChild(root_0, string_literal18_tree)

                    self._state.following.append(self.FOLLOW_block_in_stat123)
                    block19 = self.block()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, block19.tree)
                    # Lua.g:19:24: ( 'elseif' exp 'then' block )*
                    while True: #loop6
                        alt6 = 2
                        LA6_0 = self.input.LA(1)

                        if (LA6_0 == 26) :
                            alt6 = 1


                        if alt6 == 1:
                            # Lua.g:19:25: 'elseif' exp 'then' block
                            pass 
                            string_literal20=self.match(self.input, 26, self.FOLLOW_26_in_stat126)

                            string_literal20_tree = self._adaptor.createWithPayload(string_literal20)
                            self._adaptor.addChild(root_0, string_literal20_tree)

                            self._state.following.append(self.FOLLOW_exp_in_stat128)
                            exp21 = self.exp()

                            self._state.following.pop()
                            self._adaptor.addChild(root_0, exp21.tree)
                            string_literal22=self.match(self.input, 25, self.FOLLOW_25_in_stat130)

                            string_literal22_tree = self._adaptor.createWithPayload(string_literal22)
                            self._adaptor.addChild(root_0, string_literal22_tree)

                            self._state.following.append(self.FOLLOW_block_in_stat132)
                            block23 = self.block()

                            self._state.following.pop()
                            self._adaptor.addChild(root_0, block23.tree)


                        else:
                            break #loop6


                    # Lua.g:19:53: ( 'else' block )?
                    alt7 = 2
                    LA7_0 = self.input.LA(1)

                    if (LA7_0 == 27) :
                        alt7 = 1
                    if alt7 == 1:
                        # Lua.g:19:54: 'else' block
                        pass 
                        string_literal24=self.match(self.input, 27, self.FOLLOW_27_in_stat137)

                        string_literal24_tree = self._adaptor.createWithPayload(string_literal24)
                        self._adaptor.addChild(root_0, string_literal24_tree)

                        self._state.following.append(self.FOLLOW_block_in_stat139)
                        block25 = self.block()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, block25.tree)



                    string_literal26=self.match(self.input, 22, self.FOLLOW_22_in_stat143)

                    string_literal26_tree = self._adaptor.createWithPayload(string_literal26)
                    self._adaptor.addChild(root_0, string_literal26_tree)



                elif alt11 == 5:
                    # Lua.g:20:2: 'for' namelist 'in' NAME 'do' block 'end'
                    pass 
                    root_0 = self._adaptor.nil()

                    string_literal27=self.match(self.input, 28, self.FOLLOW_28_in_stat149)

                    string_literal27_tree = self._adaptor.createWithPayload(string_literal27)
                    self._adaptor.addChild(root_0, string_literal27_tree)

                    self._state.following.append(self.FOLLOW_namelist_in_stat151)
                    namelist28 = self.namelist()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, namelist28.tree)
                    string_literal29=self.match(self.input, 29, self.FOLLOW_29_in_stat153)

                    string_literal29_tree = self._adaptor.createWithPayload(string_literal29)
                    self._adaptor.addChild(root_0, string_literal29_tree)

                    NAME30=self.match(self.input, NAME, self.FOLLOW_NAME_in_stat155)

                    NAME30_tree = self._adaptor.createWithPayload(NAME30)
                    self._adaptor.addChild(root_0, NAME30_tree)

                    string_literal31=self.match(self.input, 21, self.FOLLOW_21_in_stat157)

                    string_literal31_tree = self._adaptor.createWithPayload(string_literal31)
                    self._adaptor.addChild(root_0, string_literal31_tree)

                    self._state.following.append(self.FOLLOW_block_in_stat159)
                    block32 = self.block()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, block32.tree)
                    string_literal33=self.match(self.input, 22, self.FOLLOW_22_in_stat161)

                    string_literal33_tree = self._adaptor.createWithPayload(string_literal33)
                    self._adaptor.addChild(root_0, string_literal33_tree)



                elif alt11 == 6:
                    # Lua.g:21:2: 'function' ( funcname )? funcbody
                    pass 
                    root_0 = self._adaptor.nil()

                    string_literal34=self.match(self.input, 30, self.FOLLOW_30_in_stat167)

                    string_literal34_tree = self._adaptor.createWithPayload(string_literal34)
                    self._adaptor.addChild(root_0, string_literal34_tree)

                    # Lua.g:21:13: ( funcname )?
                    alt8 = 2
                    LA8_0 = self.input.LA(1)

                    if (LA8_0 == NAME) :
                        alt8 = 1
                    if alt8 == 1:
                        # Lua.g:21:13: funcname
                        pass 
                        self._state.following.append(self.FOLLOW_funcname_in_stat169)
                        funcname35 = self.funcname()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, funcname35.tree)



                    self._state.following.append(self.FOLLOW_funcbody_in_stat172)
                    funcbody36 = self.funcbody()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, funcbody36.tree)


                elif alt11 == 7:
                    # Lua.g:22:2: 'local' 'function' NAME funcbody
                    pass 
                    root_0 = self._adaptor.nil()

                    string_literal37=self.match(self.input, 31, self.FOLLOW_31_in_stat177)

                    string_literal37_tree = self._adaptor.createWithPayload(string_literal37)
                    self._adaptor.addChild(root_0, string_literal37_tree)

                    string_literal38=self.match(self.input, 30, self.FOLLOW_30_in_stat179)

                    string_literal38_tree = self._adaptor.createWithPayload(string_literal38)
                    self._adaptor.addChild(root_0, string_literal38_tree)

                    NAME39=self.match(self.input, NAME, self.FOLLOW_NAME_in_stat181)

                    NAME39_tree = self._adaptor.createWithPayload(NAME39)
                    self._adaptor.addChild(root_0, NAME39_tree)

                    self._state.following.append(self.FOLLOW_funcbody_in_stat183)
                    funcbody40 = self.funcbody()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, funcbody40.tree)


                elif alt11 == 8:
                    # Lua.g:23:2: ( 'local' )? namelist ( '=' explist1 )?
                    pass 
                    # Lua.g:23:2: ( 'local' )?
                    alt9 = 2
                    LA9_0 = self.input.LA(1)

                    if (LA9_0 == 31) :
                        alt9 = 1
                    if alt9 == 1:
                        # Lua.g:23:2: 'local'
                        pass 
                        string_literal41=self.match(self.input, 31, self.FOLLOW_31_in_stat189) 
                        stream_31.add(string_literal41)



                    self._state.following.append(self.FOLLOW_namelist_in_stat192)
                    namelist42 = self.namelist()

                    self._state.following.pop()
                    stream_namelist.add(namelist42.tree)
                    # Lua.g:23:20: ( '=' explist1 )?
                    alt10 = 2
                    LA10_0 = self.input.LA(1)

                    if (LA10_0 == 32) :
                        alt10 = 1
                    if alt10 == 1:
                        # Lua.g:23:21: '=' explist1
                        pass 
                        char_literal43=self.match(self.input, 32, self.FOLLOW_32_in_stat195) 
                        stream_32.add(char_literal43)
                        self._state.following.append(self.FOLLOW_explist1_in_stat197)
                        explist144 = self.explist1()

                        self._state.following.pop()
                        stream_explist1.add(explist144.tree)




                    # AST Rewrite
                    # elements: namelist, explist1, 31, 32
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 23:36: -> ^( '=' ( 'local' )? namelist explist1 )
                    # Lua.g:23:39: ^( '=' ( 'local' )? namelist explist1 )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(stream_32.nextNode(), root_1)

                    # Lua.g:23:45: ( 'local' )?
                    if stream_31.hasNext():
                        self._adaptor.addChild(root_1, stream_31.nextNode())


                    stream_31.reset();
                    self._adaptor.addChild(root_1, stream_namelist.nextTree())
                    self._adaptor.addChild(root_1, stream_explist1.nextTree())

                    self._adaptor.addChild(root_0, root_1)



                    retval.tree = root_0


                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "stat"

    class laststat_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "laststat"
    # Lua.g:25:1: laststat : ( 'return' ( explist1 )? | 'break' | 'continue' );
    def laststat(self, ):

        retval = self.laststat_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal45 = None
        string_literal47 = None
        string_literal48 = None
        explist146 = None


        string_literal45_tree = None
        string_literal47_tree = None
        string_literal48_tree = None

        try:
            try:
                # Lua.g:25:10: ( 'return' ( explist1 )? | 'break' | 'continue' )
                alt13 = 3
                LA13 = self.input.LA(1)
                if LA13 == 33:
                    alt13 = 1
                elif LA13 == 34:
                    alt13 = 2
                elif LA13 == 35:
                    alt13 = 3
                else:
                    nvae = NoViableAltException("", 13, 0, self.input)

                    raise nvae

                if alt13 == 1:
                    # Lua.g:25:12: 'return' ( explist1 )?
                    pass 
                    root_0 = self._adaptor.nil()

                    string_literal45=self.match(self.input, 33, self.FOLLOW_33_in_laststat220)

                    string_literal45_tree = self._adaptor.createWithPayload(string_literal45)
                    self._adaptor.addChild(root_0, string_literal45_tree)

                    # Lua.g:25:21: ( explist1 )?
                    alt12 = 2
                    LA12_0 = self.input.LA(1)

                    if ((NAME <= LA12_0 <= LONGSTRING) or LA12_0 == 30 or LA12_0 == 48 or (54 <= LA12_0 <= 58) or LA12_0 == 62 or (64 <= LA12_0 <= 65)) :
                        alt12 = 1
                    if alt12 == 1:
                        # Lua.g:25:22: explist1
                        pass 
                        self._state.following.append(self.FOLLOW_explist1_in_laststat223)
                        explist146 = self.explist1()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, explist146.tree)





                elif alt13 == 2:
                    # Lua.g:25:35: 'break'
                    pass 
                    root_0 = self._adaptor.nil()

                    string_literal47=self.match(self.input, 34, self.FOLLOW_34_in_laststat229)

                    string_literal47_tree = self._adaptor.createWithPayload(string_literal47)
                    self._adaptor.addChild(root_0, string_literal47_tree)



                elif alt13 == 3:
                    # Lua.g:25:45: 'continue'
                    pass 
                    root_0 = self._adaptor.nil()

                    string_literal48=self.match(self.input, 35, self.FOLLOW_35_in_laststat233)

                    string_literal48_tree = self._adaptor.createWithPayload(string_literal48)
                    self._adaptor.addChild(root_0, string_literal48_tree)



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "laststat"

    class funcname_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "funcname"
    # Lua.g:27:1: funcname : NAME ( '.' NAME )* ( ':' NAME )? ;
    def funcname(self, ):

        retval = self.funcname_return()
        retval.start = self.input.LT(1)

        root_0 = None

        NAME49 = None
        char_literal50 = None
        NAME51 = None
        char_literal52 = None
        NAME53 = None

        NAME49_tree = None
        char_literal50_tree = None
        NAME51_tree = None
        char_literal52_tree = None
        NAME53_tree = None

        try:
            try:
                # Lua.g:27:10: ( NAME ( '.' NAME )* ( ':' NAME )? )
                # Lua.g:27:12: NAME ( '.' NAME )* ( ':' NAME )?
                pass 
                root_0 = self._adaptor.nil()

                NAME49=self.match(self.input, NAME, self.FOLLOW_NAME_in_funcname241)

                NAME49_tree = self._adaptor.createWithPayload(NAME49)
                self._adaptor.addChild(root_0, NAME49_tree)

                # Lua.g:27:17: ( '.' NAME )*
                while True: #loop14
                    alt14 = 2
                    LA14_0 = self.input.LA(1)

                    if (LA14_0 == 36) :
                        alt14 = 1


                    if alt14 == 1:
                        # Lua.g:27:18: '.' NAME
                        pass 
                        char_literal50=self.match(self.input, 36, self.FOLLOW_36_in_funcname244)

                        char_literal50_tree = self._adaptor.createWithPayload(char_literal50)
                        self._adaptor.addChild(root_0, char_literal50_tree)

                        NAME51=self.match(self.input, NAME, self.FOLLOW_NAME_in_funcname246)

                        NAME51_tree = self._adaptor.createWithPayload(NAME51)
                        self._adaptor.addChild(root_0, NAME51_tree)



                    else:
                        break #loop14


                # Lua.g:27:29: ( ':' NAME )?
                alt15 = 2
                LA15_0 = self.input.LA(1)

                if (LA15_0 == 37) :
                    alt15 = 1
                if alt15 == 1:
                    # Lua.g:27:30: ':' NAME
                    pass 
                    char_literal52=self.match(self.input, 37, self.FOLLOW_37_in_funcname251)

                    char_literal52_tree = self._adaptor.createWithPayload(char_literal52)
                    self._adaptor.addChild(root_0, char_literal52_tree)

                    NAME53=self.match(self.input, NAME, self.FOLLOW_NAME_in_funcname253)

                    NAME53_tree = self._adaptor.createWithPayload(NAME53)
                    self._adaptor.addChild(root_0, NAME53_tree)







                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "funcname"

    class namelist_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)
